tests/errors/syn.overflow.s32-value.or
main :: () -> void {
    x := 100_000_000_000s32;
    x;
};